@@ -1,0 +1,11 @@
+class ArrowRelation {
+    .. Constructors ..
+    +ArrowRelation(Lattice lattice)
+    .. Transformers ..
+    +void writeLaTex(String filename)
+}
+
+DGraph <|-- ArrowRelation
+
+!include ../dgraph/DGraph.iuml
+
